--- a/docs-website/versioned_docs/version-2.22/pipeline-components/connectors/weaveconnector.mdx
+++ b/docs-website/versioned_docs/version-2.22/pipeline-components/connectors/weaveconnector.mdx
@@ -16,7 +16,7 @@ Learn how to use Weights & Biases Weave framework for tracing and monitoring you
 | **Most common position in a pipeline** | Anywhere, as it’s not connected to other components                                                                                                                                                                     |
 | **Mandatory init variables**           | `pipeline_name`: The name of your pipeline, which will also show up in Weaver dashboard.                                                                                                                                |
 | **Output variables**                   | `pipeline_name`: The name of the pipeline that just run                                                                                                                                                                 |
-| **API reference**                      | [weave](/reference/weave)                                                                                                                                                                       |
+| **API reference**                      | [weave](/reference/integrations-weave)                                                                                                                                                                       |
 | **GitHub link**                        | [\https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/weave](https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/weave) |
 
 </div>
