--- a/docs-website/docs/pipeline-components/connectors/weaveconnector.mdx
+++ b/docs-website/docs/pipeline-components/connectors/weaveconnector.mdx
@@ -16,8 +16,8 @@ Learn how to use Weights & Biases Weave framework for tracing and monitoring you
 | **Most common position in a pipeline** | Anywhere, as it’s not connected to other components                                                                                                                                                                     |
 | **Mandatory init variables**           | `pipeline_name`: The name of your pipeline, which will also show up in Weaver dashboard.                                                                                                                                |
 | **Output variables**                   | `pipeline_name`: The name of the pipeline that just run                                                                                                                                                                 |
-| **API reference**                      | [weights and bias](/reference/integrations-weights-bias)                                                                                                                                                                       |
-| **GitHub link**                        | [\https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/weights_and_biases_weave](https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/weights_and_biases_weave) |
+| **API reference**                      | [Weave](/reference/integrations-weave)                                                                                                                                                                       |
+| **GitHub link**                        | https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/weave |
 
 </div>
 
