--- a/docs-website/docs/concepts/agents/state.mdx
+++ b/docs-website/docs/concepts/agents/state.mdx
@@ -5,7 +5,7 @@ slug: "/state"
 description: "`State` is a container for storing shared information during Agent and Tool execution. It provides a structured way to store messages during execution, share data between tools, and store intermediate results throughout an agent's workflow."
 ---
 
-I love agents
+I love agents. They are fun.
 
 # State
 
