Fix code formatting in docs and remove a few dead links

--- a/docs-website/docs/concepts/components/custom-components.mdx
+++ b/docs-website/docs/concepts/components/custom-components.mdx
@@ -51,8 +51,10 @@ class WelcomeTextGenerator:
   """
   @component.output_types(welcome_text=str, note=str)
   def run(self, name:str):
-    return {"welcome_text": f'Hello {name}, welcome to Haystack!'.upper(), "note": "welcome message is ready"}
-
+    return {
+        "welcome_text": f'Hello {name}, welcome to Haystack!'.upper(),
+        "note": "welcome message is ready"
+    }
 ```
 
 Here, the custom component `WelcomeTextGenerator` accepts one input: `name` string and returns two outputs: `welcome_text` and `note`.
@@ -63,7 +65,6 @@ Check out an example below on how to create two custom components and connect th
 
 ```python
 # import necessary dependencies
-from typing import List
 from haystack import component, Pipeline
 
 # Create two custom components. Note the mandatory @component decorator and @component.output_types, as well as the mandatory run method.
@@ -74,14 +75,17 @@ class WelcomeTextGenerator:
   """
   @component.output_types(welcome_text=str, note=str)
   def run(self, name: str):
-    return {"welcome_text": ('Hello {name}, welcome to Haystack!'.format(name=name)).upper(), "note": "welcome message is ready"}
+    return {
+        "welcome_text": ('Hello {name}, welcome to Haystack!'.format(name=name)).upper(),
+        "note": "welcome message is ready"
+    }
 
 @component
 class WhitespaceSplitter:
   """
   A component for splitting the text by whitespace
   """
-  @component.output_types(split_text=List[str])
+  @component.output_types(split_text=list[str])
   def run(self, text: str):
     return {"split_text": text.split()}
 
