--- a/docs-website/docs/concepts/agents.mdx
+++ b/docs-website/docs/concepts/agents.mdx
@@ -71,7 +71,6 @@ from haystack.components.websearch import SerperDevWebSearch
 from haystack.dataclasses import Document, ChatMessage
 from haystack.tools.component_tool import ComponentTool
 
-from typing import List
 
 ## Create the web search component
 web_search = SerperDevWebSearch(top_k=3)
@@ -86,9 +85,9 @@ web_tool = ComponentTool(
 ## Create the agent with the web tool
 tool_calling_agent = Agent(
     chat_generator=OpenAIChatGenerator(model="gpt-4o-mini"),
-    system_prompt="""You're a helpful agent. When asked about current information like weather, news, or facts, 
+    system_prompt="""You're a helpful agent. When asked about current information like weather, news, or facts,
                      use the web_search tool to find the information and then summarize the findings.
-                     When you get web search results, extract the relevant information and present it in a clear, 
+                     When you get web search results, extract the relevant information and present it in a clear,
                      concise manner.""",
     tools=[web_tool]
 )
@@ -104,7 +103,7 @@ print(result["messages"][-1].text)
 Resulting in:
 
 ```python
->>> The current weather in Berlin is approximately 60°F. The forecast for today includes clouds in the morning with some sunshine later. The high temperature is expected to be around 65°F, and the low tonight will drop to 40°F. 
+>>> The current weather in Berlin is approximately 60°F. The forecast for today includes clouds in the morning with some sunshine later. The high temperature is expected to be around 65°F, and the low tonight will drop to 40°F.
 
 - **Morning**: 49°F
 - **Afternoon**: 57°F
@@ -135,7 +134,7 @@ from haystack.core.component.types import Variadic
 from haystack.dataclasses import ChatMessage
 from haystack.tools import ComponentTool
 
-from typing import Any, Dict, List
+from typing import Any
 
 ## helper component to temporarily store last user query before the tool call
 @component()
@@ -143,9 +142,8 @@ class MessageCollector:
     def __init__(self):
         self._messages = []
 
-    @component.output_types(messages=List[ChatMessage])
-    def run(self, messages: Variadic[List[ChatMessage]]) -> Dict[str, Any]:
-
+    @component.output_types(messages=list[ChatMessage])
+    def run(self, messages: Variadic[list[ChatMessage]]) -> dict[str, Any]:
         self._messages.extend([msg for inner in messages for msg in inner])
         return {"messages": self._messages}
 
@@ -163,20 +161,22 @@ routes = [
         "condition": "{{replies[0].tool_calls | length > 0}}",
         "output": "{{replies}}",
         "output_name": "there_are_tool_calls",
-        "output_type": List[ChatMessage],
+        "output_type": list[ChatMessage],
     },
     {
         "condition": "{{replies[0].tool_calls | length == 0}}",
         "output": "{{replies}}",
         "output_name": "final_replies",
-        "output_type": List[ChatMessage], 
+        "output_type": list[ChatMessage],
     },
 ]
 
 ## Create the pipeline
 tool_agent = Pipeline()
 tool_agent.add_component("message_collector", MessageCollector())
-tool_agent.add_component("generator", OpenAIChatGenerator(model="gpt-4o-mini", tools=[web_tool]))
+tool_agent.add_component(
+    "generator", OpenAIChatGenerator(model="gpt-4o-mini", tools=[web_tool])
+)
 tool_agent.add_component("router", ConditionalRouter(routes, unsafe=True))
 tool_agent.add_component("tool_invoker", ToolInvoker(tools=[web_tool]))
 
@@ -187,8 +187,9 @@ tool_agent.connect("tool_invoker.tool_messages", "message_collector")
 tool_agent.connect("message_collector", "generator.messages")
 
 messages = [
-    ChatMessage.from_system("You're a helpful agent choosing the right tool when necessary"), 
-    ChatMessage.from_user("How is the weather in Berlin?")]
+    ChatMessage.from_system("You're a helpful agent choosing the right tool when necessary"),
+    ChatMessage.from_user("How is the weather in Berlin?")
+]
 result = tool_agent.run({"messages": messages})
 
 print(result["router"]["final_replies"][0].text)
