--- a/docs-website/docs/concepts/device-management.mdx
+++ b/docs-website/docs/concepts/device-management.mdx
@@ -48,10 +48,10 @@ To use multiple devices, use the `ComponentDevice.from_multiple` class method:
 from haystack.utils import ComponentDevice, Device, DeviceMap
 
 device_map = DeviceMap({
-	"encoder.layer1": Device.gpu(id=0),
-	"decoder.layer2": Device.gpu(id=1),
-	"self_attention": Device.disk(),
-	"lm_head": Device.cpu()
+    "encoder.layer1": Device.gpu(id=0),
+    "decoder.layer2": Device.gpu(id=1),
+    "self_attention": Device.disk(),
+    "lm_head": Device.cpu()
 })
 device = ComponentDevice.from_multiple(device_map)
 generator = HuggingFaceLocalGenerator(model="llama2", device=device)
@@ -78,21 +78,23 @@ class MyComponent(Component):
 
     def warm_up(self):
         # Call the framework-specific conversion method.
-        self.model = AutoModel.from_pretrained("deepset/bert-base-cased-squad2", device=self.device.to_hf())
+        self.model = AutoModel.from_pretrained(
+            "deepset/bert-base-cased-squad2", device=self.device.to_hf()
+            )
 
-	  def to_dict(self):
-	    # Serialize the policy like any other (custom) data.
-	    return default_to_dict(self,
-							 device=self.device.to_dict() if self.device else None,
-							 ...)
+    def to_dict(self):
+        # Serialize the policy like any other (custom) data.
+        return default_to_dict(
+            self, device=self.device.to_dict() if self.device else None, ...
+        )
 
-	  @classmethod
-	  def from_dict(cls, data):
-	    # Deserialize the device data inplace before passing
-			# it to the generic from_dict function.
+    @classmethod
+    def from_dict(cls, data):
+        # Deserialize the device data inplace before passing
+        # it to the generic from_dict function.
 	    init_params = data["init_parameters"]
-      init_params["device"] = ComponentDevice.from_dict(init_params["device"])
-			return default_from_dict(cls, data)
+        init_params["device"] = ComponentDevice.from_dict(init_params["device"])
+        return default_from_dict(cls, data)
 
 ## Automatically selects a device.
 c = MyComponent(device=None)
@@ -105,18 +107,18 @@ c = MyComponent(device=ComponentDevice.from_single(Device.cpu()))
 
 ## Allow the component to use multiple devices using a device map.
 c = MyComponent(device=ComponentDevice.from_multiple(DeviceMap({
-      "layer1": Device.cpu(),
-      "layer2": Device.gpu(1),
-      "layer3": Device.disk()
+    "layer1": Device.cpu(),
+    "layer2": Device.gpu(1),
+    "layer3": Device.disk()
 })))
 ```
 
 If the component’s backend provides a more specialized API to manage devices, it could add an additional init parameter that acts as a conduit. For instance, `HuggingFaceLocalGenerator` exposes a `huggingface_pipeline_kwargs` parameter through which Hugging Face-specific `device_map`  arguments can be passed:
 
 ```python
-generator = HuggingFaceLocalGenerator(model="llama2", huggingface_pipeline_kwargs={
-	"device_map": "balanced"
-})
+generator = HuggingFaceLocalGenerator(
+    model="llama2", huggingface_pipeline_kwargs={"device_map": "balanced"}
+)
 ```
 
 In such cases, ensure that the parameter precedence and selection behavior is clearly documented. In the case of `HuggingFaceLocalGenerator`, the device map passed through the `huggingface_pipeline_kwargs` parameter overrides the explicit `device` parameter and is documented as such.
