--- a/docs-website/docs/concepts/document-store.mdx
+++ b/docs-website/docs/concepts/document-store.mdx
@@ -46,10 +46,8 @@ The ID field is mandatory, so if you don’t choose a specific ID yourself, Hays
 document_store = ChromaDocumentStore()
 documents = [
     Document(
-      'meta'={'name': DOCUMENT_NAME, ...}
-			'id'="document_unique_id",
-			'content'="this is content"
-  	),
+        meta={"name": DOCUMENT_NAME, ...}, id="document_unique_id", content="this is content"
+    ),
   	...
 ]
 document_store.write_documents(documents)
@@ -86,7 +84,7 @@ from haystack.components.writers import DocumentWriter
 from haystack.document_stores.types import DuplicatePolicy
 
 document_store = InMemoryDocumentStore()
-document_writer = DocumentWriter(document_store = document_store, policy=DuplicatePolicy.SKIP)
+document_writer = DocumentWriter(document_store=document_store, policy=DuplicatePolicy.SKIP)
 ```
 
 ### Custom Document Store
