--- a/docs-website/docs/concepts/pipelines/debugging-pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines/debugging-pipelines.mdx
@@ -32,7 +32,9 @@ from haystack.components.builders.chat_prompt_builder import ChatPromptBuilder
 from haystack.dataclasses import ChatMessage
 
 ## Documents
-documents = [Document(content="Joe lives in Berlin"), Document(content="Joe is a software engineer")]
+documents = [
+    Document(content="Joe lives in Berlin"), Document(content="Joe is a software engineer")
+]
 
 ## Define prompt template
 prompt_template = [
@@ -46,16 +48,26 @@ prompt_template = [
 
 ## Define pipeline
 p = Pipeline()
-p.add_component(instance=ChatPromptBuilder(template=prompt_template, required_variables={"query", "documents"}), name="prompt_builder")
-p.add_component(instance=OpenAIChatGenerator(api_key=Secret.from_env_var("OPENAI_API_KEY")), name="llm")
+p.add_component(
+    instance=ChatPromptBuilder(
+        template=prompt_template, required_variables={"query", "documents"}
+    ),
+    name="prompt_builder"
+)
+p.add_component(
+    instance=OpenAIChatGenerator(api_key=Secret.from_env_var("OPENAI_API_KEY")),
+    name="llm"
+)
 p.connect("prompt_builder", "llm.messages")
 
 ## Define question
 question = "Where does Joe live?"
 
 ## Execute pipeline
-result = p.run({"prompt_builder": {"documents": documents, "query": question}},
-               include_outputs_from="prompt_builder")
+result = p.run(
+    {"prompt_builder": {"documents": documents, "query": question}},
+    include_outputs_from="prompt_builder"
+)
 
 ## Print result
 print(result)
