--- a/docs-website/docs/concepts/secret-management.mdx
+++ b/docs-website/docs/concepts/secret-management.mdx
@@ -136,7 +136,6 @@ new_env_secret = Secret.from_dict(env_secret_dict)
 Both types of secrets can be resolved to their actual values using the `resolve_value` method. This method returns the token or the value of the environment variable.
 
 ```python
-
 ## Resolve the token-based secret
 token_value = api_key_secret.resolve_value()
 
@@ -153,29 +152,33 @@ from haystack.utils import Secret, deserialize_secrets_inplace
 
 @component
 class MyComponent:
-  def __init__(self, api_key: Optional[Secret] = None, **kwargs):
-    self.api_key = api_key
-    self.backend = None
+    def __init__(self, api_key: Optional[Secret] = None, **kwargs):
+        self.api_key = api_key
+        self.backend = None
 
-  def warm_up(self):
-    # Call resolve_value to yield a single result. The semantics of the result is policy-dependent.
-    # Currently, all supported policies will return a single string token.
-    self.backend = SomeBackend(api_key=self.api_key.resolve_value() if self.api_key else None, ...)
+    def warm_up(self):
+        # Call resolve_value to yield a single result. The semantics of the result is policy-dependent.
+        # Currently, all supported policies will return a single string token.
+        self.backend = SomeBackend(
+            api_key=self.api_key.resolve_value() if self.api_key else None, ...
+        )
 
-  def to_dict(self):
-    # Serialize the policy like any other (custom) data. If the policy is token-based, it will
-    # raise an error.
-    return default_to_dict(self, api_key=self.api_key.to_dict() if self.api_key else None, ...)
+    def to_dict(self):
+        # Serialize the policy like any other (custom) data. If the policy is token-based, it will
+        # raise an error.
+        return default_to_dict(
+            self, api_key=self.api_key.to_dict() if self.api_key else None, ...
+        )
 
-  @classmethod
-  def from_dict(cls, data):
-    # Deserialize the policy data before passing it to the generic from_dict function.
-    api_key_data = data["init_parameters"]["api_key"]
-    api_key = Secret.from_dict(api_key_data) if api_key_data is not None else None
-    data["init_parameters"]["api_key"] = api_key
-		# Alternatively, use the helper function.
-		# deserialize_secrets_inplace(data["init_parameters"], keys=["api_key"])
-    return default_from_dict(cls, data)
+    @classmethod
+    def from_dict(cls, data):
+        # Deserialize the policy data before passing it to the generic from_dict function.
+        api_key_data = data["init_parameters"]["api_key"]
+        api_key = Secret.from_dict(api_key_data) if api_key_data is not None else None
+        data["init_parameters"]["api_key"] = api_key
+        # Alternatively, use the helper function.
+        # deserialize_secrets_inplace(data["init_parameters"], keys=["api_key"])
+        return default_from_dict(cls, data)
 
 ## No authentication.
 component = MyComponent(api_key=None)
