--- a/docs-website/docs/pipeline-components/builders/promptbuilder.mdx
+++ b/docs-website/docs/pipeline-components/builders/promptbuilder.mdx
@@ -162,7 +162,10 @@ from haystack.components.generators import OpenAIGenerator
 from haystack.components.builders.prompt_builder import PromptBuilder
 
 ## in a real world use case documents could come from a retriever, web, or any other source
-documents = [Document(content="Joe lives in Berlin"), Document(content="Joe is a software engineer")]
+documents = [
+    Document(content="Joe lives in Berlin"),
+    Document(content="Joe is a software engineer")
+]
 prompt_template = """
     Given these documents, answer the question.\nDocuments:
     {% for doc in documents %}
@@ -173,8 +176,12 @@ prompt_template = """
     \nAnswer:
     """
 p = Pipeline()
-p.add_component(instance=PromptBuilder(template=prompt_template), name="prompt_builder")
-p.add_component(instance=OpenAIGenerator(api_key=Secret.from_env_var("OPENAI_API_KEY")), name="llm")
+p.add_component(
+    instance=PromptBuilder(template=prompt_template), name="prompt_builder"
+)
+p.add_component(
+    instance=OpenAIGenerator(api_key=Secret.from_env_var("OPENAI_API_KEY")), name="llm"
+)
 p.connect("prompt_builder", "llm")
 
 question = "Where does Joe live?"
