--- a/docs-website/docs/pipeline-components/classifiers/documentlanguageclassifier.mdx
+++ b/docs-website/docs/pipeline-components/classifiers/documentlanguageclassifier.mdx
@@ -77,25 +77,40 @@ document_store_en = InMemoryDocumentStore()
 document_store_de = InMemoryDocumentStore()
 
 document_classifier = DocumentLanguageClassifier(languages = ["en", "de"])
-metadata_router = MetadataRouter(rules={"en": {"language": {"$eq": "en"}}, "de": {"language": {"$eq": "de"}}})
+metadata_router = MetadataRouter(
+    rules={"en": {"language": {"$eq": "en"}}, "de": {"language": {"$eq": "de"}}}
+)
 english_embedder = SentenceTransformersDocumentEmbedder()
-german_embedder = SentenceTransformersDocumentEmbedder(model="PM-AI/bi-encoder_msmarco_bert-base_german")
-en_writer = DocumentWriter(document_store = document_store_en)
-de_writer = DocumentWriter(document_store = document_store_de)
+german_embedder = SentenceTransformersDocumentEmbedder(
+    model="PM-AI/bi-encoder_msmarco_bert-base_german"
+)
+en_writer = DocumentWriter(document_store=document_store_en)
+de_writer = DocumentWriter(document_store=document_store_de)
 
 indexing_pipeline = Pipeline()
-indexing_pipeline.add_component(instance=document_classifier, name="document_classifier")
-indexing_pipeline.add_component(instance=metadata_router, name="metadata_router")
-indexing_pipeline.add_component(instance=english_embedder, name="english_embedder")
-indexing_pipeline.add_component(instance=german_embedder, name="german_embedder")
-indexing_pipeline.add_component(instance=en_writer, name="en_writer")
-indexing_pipeline.add_component(instance=de_writer, name="de_writer")
+indexing_pipeline.add_component(document_classifier, name="document_classifier")
+indexing_pipeline.add_component(metadata_router, name="metadata_router")
+indexing_pipeline.add_component(english_embedder, name="english_embedder")
+indexing_pipeline.add_component(german_embedder, name="german_embedder")
+indexing_pipeline.add_component(en_writer, name="en_writer")
+indexing_pipeline.add_component(de_writer, name="de_writer")
 
-indexing_pipeline.connect("document_classifier.documents", "metadata_router.documents")
+indexing_pipeline.connect(
+    "document_classifier.documents", "metadata_router.documents"
+)
 indexing_pipeline.connect("metadata_router.en", "english_embedder.documents")
 indexing_pipeline.connect("metadata_router.de", "german_embedder.documents")
 indexing_pipeline.connect("english_embedder", "en_writer")
 indexing_pipeline.connect("german_embedder", "de_writer")
 
-indexing_pipeline.run({"document_classifier": {"documents": [Document(content="This is an English sentence."), Document(content="Dies ist ein deutscher Satz.")]}})
+indexing_pipeline.run(
+    {
+        "document_classifier": {
+            "documents": [
+                Document(content="This is an English sentence."),
+                Document(content="Dies ist ein deutscher Satz.")
+            ]
+        }
+    }
+)
 ```
