Remove mention of output adapters

--- a/docs-website/docs/concepts/pipelines.mdx
+++ b/docs-website/docs/concepts/pipelines.mdx
@@ -60,9 +60,9 @@ To connect components and integrations in a pipeline, you must know the names of
 ### Smart Pipeline Connections
 
 Pipelines support smarter connection semantics that simplify how components are wired together.
-Compatible outputs can be implicitly combined when connected to a single input, and certain types can be flexibly connected without additional adapters.
+Compatible outputs can be implicitly combined when connected to a single input.
 
-These behaviors reduce the need for glue components like `Joiners` and `OutputAdapters`, keeping pipelines concise and easier to read.
+This behavior reduces the need for glue components like `Joiners`, keeping pipelines concise and easier to read.
 
 See [Smart Pipeline Connections](pipelines/smart-connections.mdx) for details and examples.
 
